# grad-meeting-ai-workflow

./: .env.example  .gitignore  Dockerfile  Readme.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/versions/: 0001_initial.py
app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
app/services/: __init__.py  chunker.py  embeddings.py  extractor.py  llm.py  memory.py  orchestrator.py  persistence.py  planner.py  profiles.py  router.py  validator.py
app/templates/: meetings_detail.html  meetings_index.html  meetings_new.html
browser-extension/: README.md  content_script.js  manifest.json  options.html  options.js  popup.html  popup.js
tests/: test_api_flow.py  test_bailian_client.py  test_chunker.py  test_orchestrator.py  test_profiles_router.py  test_validator.py
